bad/assign_field_class_new_class_string.example_compiler_output
ERROR
[1mbad/assign_field_class_new_class_string.lat:9:14: [1;31merror: [0;1massigning to `Y` from incompatible type `string`[m
	(new C).fld = "";
	            [1;32m^[m
